# icongen

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  igen.py  igen.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml
igen/: __init__.py  cli.py  image.py
src/: __init__.py  config.py  igen.py
src/igen/: __init__.py  cfg.py  cli.py  image.py
