[tool.poetry]
name = "icongen"
version = "1.4.0"
description = "icon generator for linux"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Pillow = "^9.5.0"
CairoSVG = "^2.7.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
types-Pillow = "^9.5.0.2"
pyinstaller = "^5.10.1"
pytest = "^7.3.1"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
