[tool.poetry]
name = "igen"
version = "1.6.0"
description = "icon generator for linux"
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]
license = "AGPL"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Pillow = "^9.5.0"
CairoSVG = "^2.7.0"
typer = { extras = ["all"], version = "^0.11.0" }

[tool.poetry.group.dev.dependencies]
types-Pillow = "^9.5.0.2"
pyinstaller = "^5.10.1"
pytest = "^7.3.1"
mypy = "^1.2.0"
ruff = "^0.3.4"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
igen = "src.igen.__main__:cli"

[tool.mypy]
ignore_missing_imports = true
